--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,20 @@
 :root {
+    --themeColor:  #6542c4;
+    --themeLine:  #6b46d3;
+    --themeHover:  #714ada;
+    --gold: gold;
+    --text: 14px
+
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: rgb(0, 0, 0);
+  --global-text: rgb(53, 53, 53);
+  --background-start-rgb: rgb(214, 219, 220);
+  --background-end-rgb: rgb(255, 255, 255);
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
@@ -40,7 +47,7 @@
   --card-border-rgb: 131, 134, 135;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -71,7 +78,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -83,10 +90,15 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-smooth: auto;
+  font-smooth: never;
+  font-smooth: always;
+  font-size: 14px;
+  
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--global-text);
   background: linear-gradient(
       to bottom,
       transparent,
@@ -100,8 +112,39 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+p{
+  font-size: var(--text);
+  font-weight: 300;
+  line-height: 24px;
+}
+
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1368px;
+  width: 100%;
+}
+
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
+  }
+} */
+
+@media (max-width: 1599) {
+  .container {
+    max-width: calc(100vw - 270px);
+  }
+}
+
+@media (max-width: 1439px) {
+  .container {
+    max-width: 1170px;
+  }
+}
+
+@media (max-width: 1223px){
+  .container {
+      max-width: calc(100vw - 54px);
   }
 }
