--- a/app/globals.css
+++ b/app/globals.css
@@ -99,12 +99,18 @@ body {
 
 body {
   color: var(--global-text);
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+}
+
+h1,h2,h3{
+  text-transform: capitalize;
+  font-weight: 500;
+  padding: 5px 0;
 }
 
 a {
